force-app/main/default/objects/Portal_Presentation__c/Portal_Presentation__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community :</description>
    <label>Portal Home Page Box Content</label>
    <nameField>
        <label>Portal_Presentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Home Page Box Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>