force-app/main/default/objects/Portal_Presentation__c/fields/Community_Presentation_Text__c.field-meta.xml
<CustomField>
    <fullName>Community_Presentation_Text__c</fullName>
    <label>Community Presentation Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>