force-app/main/default/objects/Portal_Presentation__c/fields/Content_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Content_Serial_Number__c</fullName>
    <label>Content Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>