force-app/main/default/objects/Portal_Presentation__c/fields/Image_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Image_URL_1__c</fullName>
    <label>Image URL 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>