force-app/main/default/objects/Portal_Presentation__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image_URL</label>
    <type>Url</type>
</CustomField>