force-app/main/default/objects/Portal_Presentation__c/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Permission Set</label>
    <referenceTo>Portal_Permission_Sets__c</referenceTo>
    <relationshipLabel>Portal Home Page Box Contents</relationshipLabel>
    <relationshipName>Portal_Home_Page_Box_Contents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>