force-app/main/default/objects/Portal_Presentation__c/fields/Portal_Home_Page_Box__c.field-meta.xml
<CustomField>
    <fullName>Portal_Home_Page_Box__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Home Page Box</label>
    <referenceTo>Portal_Home_Page_Box__c</referenceTo>
    <relationshipLabel>Portal Home Page Box Contents</relationshipLabel>
    <relationshipName>Portal_Home_Page_Box_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>