force-app/main/default/objects/Portal_Presentation__c/fields/Portal_Profile__c.field-meta.xml
<CustomField>
    <fullName>Portal_Profile__c</fullName>
    <label>Portal_Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRID_VCA_Support</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Sales</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Training</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Marketing</fullName>
            </value>
            <value>
                <fullName>GRID_VCA_Manager</fullName>
            </value>
            <value>
                <fullName>GRID VCA Partner Portal Profile(Generic)</fullName>
            </value>
            <value>
                <fullName>GRID VGX Partner Portal Profile(Generic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>