force-app/main/default/objects/Portal_Presentation__c/fields/Presentation_Text__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Text__c</fullName>
    <label>Presentation Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>