force-app/main/default/objects/Portal_Presentation__c/fields/Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type__c</fullName>
    <label>Presentation_Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>