force-app/main/default/objects/Portal_Presentation__c/fields/Presentation_URL__c.field-meta.xml
<CustomField>
    <fullName>Presentation_URL__c</fullName>
    <label>Presentation_URL</label>
    <type>Url</type>
</CustomField>